--- a/style.css
+++ b/style.css
@@ -8,8 +8,23 @@
   width: 100%;
   height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.shapes {
+  margin-bottom: 50px;
+}
+
+#cross-btn {
+  margin-right: 10px;
+}
+
+button {
+  width: 200px;
+  height: 35px;
+  font-size: 16px;
 }
 
 table {
